# opencv

./: README
build-chain/atlas-3.8.3/TexDoc/: ChangeLog  atlas_contrib.tex  atlas_devel.tex
build-chain/atlas-3.8.3/debian/: README.Debian  TODO  changelog  control  control.in  generate.sh  libatlas-2.0-dev.postinst  libatlas-2.0-dev.prerm  libatlas-altivec-dev.postinst  (+57 more)
build-chain/cpufrequtils-007/: Makefile
build-chain/imlib2-1.4.2/: Makefile.am  Makefile.in  README  aclocal.m4  config.guess  config.h.in  configure  configure.ac  imlib2.spec  imlib2.spec.in
build-chain/imlib2-1.4.2/.pc/001-removed_data_dir.diff/: configure.ac
build-chain/imlib2-1.4.2/.pc/002-removed_upstream_debian_dir.diff/: Makefile.am  configure.ac
build-chain/imlib2-1.4.2/.pc/003-add_test_target.diff/: Makefile.am
build-chain/imlib2-1.4.2/data/: Makefile.in
build-chain/imlib2-1.4.2/data/images/: Makefile.in
build-chain/imlib2-1.4.2/debian/: README.source  changelog  control  copyright  libimlib2-dev.install  rules
build-chain/imlib2-1.4.2/debian/patches/: 001-removed_data_dir.diff  002-removed_upstream_debian_dir.diff  003-add_test_target.diff  004-bts_505714_xpm_buffer_overflow.diff  series
build-chain/imlib2-1.4.2/doc/: Makefile.in
build-chain/imlib2-1.4.2/src/: Makefile.in
build-chain/imlib2-1.4.2/src/lib/: Makefile.in
build-chain/imlib2-1.4.2/src/modules/: Makefile.in
build-chain/imlib2-1.4.2/src/modules/filters/: Makefile.in
build-chain/imlib2-1.4.2/src/modules/loaders/: Makefile.in  loader_xpm.c
opencv/opencv-2.3.1/: CMakeLists.txt  OpenCVModule.cmake
(+1964 files in other folders)
